# Point-Cloud-Processor

./: .gitignore  README.md  config.ini
Cloud_parameters/: README.md  cloud_parameters.py
Evaluate_params/: DBSCAN_parameter_tuning.ipynb  parameter_tuning_sklearn.ipynb
Ground_truth/: README.md  findGroundTruth.py
Matplotlib_tests/: README.md  Test_of_matplotlib.py
PCL-software/: README.md  run.sh
PCL-software/csv2pcd/: CMakeLists.txt
PCL-software/csv2pcd/src/: CSV2PCD.cpp  CSV2PCD.h  main_csv2pcd.cpp
PCL-software/renderPCD/: CMakeLists.txt
PCL-software/renderPCD/src/: ProcessPCDs.cpp  ProcessPCDs.h  renderPCD.cpp
Point_cloud_cleaner/: README.md  point_cloud_cleaner.py
txt2Potree/: README.md  txt2Potree.py
